--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:v-on="http://www.w3.org/1999/xhtml">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Vue TEST</title>
+  <title>Vue Practice</title>
   <!-- Vue.js を読み込む -->
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 </head>
 <body>
 
-  <div id="app">
-    <p v-html="message"></p>
-  </div>
+  <div id="app-1">{{ message }}</div>  <!-- {{ message }} が Vueデータに置換される -->
 
   <script src="assets/js/index.js"></script>
+
 </body>
 </html>
