--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:v-bind="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <title>Vue Practice</title>
-  <!-- Vue.js を読み込む -->
+  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+
+
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 <body>
 
-  <div id="app-1">{{ message }}</div>  <!-- {{ message }} が Vueデータに置換される -->
+  <div id="app-2">
+
+
+    <ol>
+      <todo-item
+        v-for="item in groceryList"
+        v-bind:todo="item"
+        v-bind:key="item.id"
+      ></todo-item>
+    </ol>
+
+
+  </div>
 
   <script src="assets/js/index.js"></script>
-
 </body>
 </html>
