v-bindはHTMLの内部属性を設定できることを学習

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="app">
     <!--<button v-on:click="a = a+1">Change it</button>-->
 
-    <input type="text" v-bind:id="test"/>
+    <button v-bind:disabled="isButtonDisabled">Button</button>
 
 </div>
 
