--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 
 <div id="app">
 
-    <p>{{message}}</p>
 
-    <p v-once>{{message}}</p>
+    <a v-bind:[atr]="url">なにこれ</a>
 
-    <button v-on:click='vm.message="test"'>切り替えボタン</button>
 </div>
 
 <script src="assets/js/index.js"></script>
