算出プロパティについて

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 
 <div id="app">
 
+    <p>めせーじは:"{{message}}"</p>
+    <p>反転させるよ:"{{reversedMessage}}"</p>
+    <p>{{test}}</p>
 
-    <a v-bind:[atr]="url">なにこれ</a>
+
+    <p>{{now()}}</p>
+    <p>{{now()}}</p>
+    <p>{{now()}}</p>
+    <p>{{now()}}</p>
 
 </div>
 
