watchプロパティ学習

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
 
     <p>{{now()}}</p>
-    <p>{{now()}}</p>
-    <p>{{now()}}</p>
-    <p>{{now()}}</p>
+
+    <p>{{firstName}}</p>
+    <p>{{lastName}}</p>
+    <p>{{fullName}}</p>
 
 </div>
 
