windowsからコミット

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <label><input type="radio" v-model="myName" value="orengi">おれんじ</label>
 
 
-    <button v-bind:disabled="myName ===''">そうしｎ</button>
+    <button v-bind:disabled="myName ===''">送信</button>
 
 
 </div>
