--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 </head>
 <body>
 <div id="app">
