くるくる数字が増えるところまで

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
 <div id="app">
 
-    <button v-on:click="startTimer">おしてみ</button>
-    <p>{{resetSec}}</p>
+    <p>{{animeNumber}}</p>
+
+    <p>{{test}}</p>
+
+    <input type="number" v-model.number="myNumber">
 </div>
 
 <script src="assets/js/index.js"></script>
