にゅっと現れるようになった

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 <body>
 <div id="app">
 
-    <textarea v-model="input"></textarea>
+    <transition-group>
+        <li v-for="item in items" v-bind:key="item">{{item}}</li>
+    </transition-group>
 
-    <div v-html="convertMarkdown"></div>
+    <label><input v-model="addItem" placeholder="追加するリスト"></label>
+    <button v-on:click="addList">追加</button>
+    <button v-on:click="removeLast">最後の1つを削除</button>
+
 </div>
 
 <script src="assets/js/index.js"></script>
