しゃっふるする動きをつけた。transition

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <label><input v-model="addItem" placeholder="追加するリスト"></label>
     <button v-on:click="addList">追加</button>
     <button v-on:click="removeLast">最後の1つを削除</button>
+    <button v-on:click="shuffleData">シャッフル</button>
+    <button v-on:click="sortData">そーとします</button>
 
 </div>
 
