--- a/index.html
+++ b/index.html
@@ -18,23 +18,9 @@
 <body>
 <div id="app">
 
-    <transition-group>
-        <div v-for="todo in todos" v-bind:key="todo">
-            <label>
-                <input type="checkbox" v-model="todo.done">
-                <span v-bind:class="{donestyle:todo.done}">{{todo.text}}</span>
-            </label>
-
-        </div>
-    </transition-group>
-
-
-    <p>{{remaining}}/{{todos.length}}件処理しました。</p>
-
-    <input style="width: 300px;" type="text" v-model.trim="addText" placeholder="エンターキーで送信してね"
-           v-on:keyup.enter="addToDo">
-    <button v-on:click="cleanToDo">処理済みを削除</button>
-
+    <my-component my-name="ごうだ"></my-component>
+    <my-component my-name="かずき"></my-component>
+    <my-component></my-component>
 
 </div>
 
